This file documents the revision history for the SNClient+ agent.

next:
         - fix check_drivesize letter: excludes

0.29     Thu Nov 14 16:35:10 CET 2024
         - fix vbs wrapper in default config (#170)
         - fix empty performance data when using perf-config units
         - fix fix process state filter on windows (#169)
         - show error if shared ports use different ssl configuration

0.28     Mon Oct 21 23:08:47 CEST 2024
         - update windows exporter to 0.29.1
         - wmi: always set en_US language in query (#156)
         - check_eventlog: fix time offset parsing (#157)
         - add /api/v1/inventory/{module} rest endpoint to get specific inventory
         - add exporter to inventory list
         - fix updates from custom urls (#159)
         - add /api/v1/admin/updates/install endpoint to trigger update
         - fix agent not starting if exporter_modules folder does not exist
         - check_files: add version macro support for .exe/.dll files
         - fix missing thresholds when using perf-syntax
         - add check_ping plugin
         - check_process: check default empty-state to critical

0.27     Mon Sep  2 19:31:14 CEST 2024
         - do not use empty-state if warn/crit conditions contain check on 'count'
         - check_memory: distinguish between committed and swap memory
         - check_memory: change default type on linux to physical,swap
         - fix evaluating nested filter conditions
         - fix check_drivesize missing performance data when using free_bytes threshold (#136)
         - fix check_http/check_tcp/check_dns help (#135)
         - fix using condition alias on nested filters
         - fix check_tasksched memory leak (#122)
         - update windows exporter to 0.28.1

0.26     Wed Jul 17 15:23:37 CEST 2024
         - fix check_os_version windows build version (#134)
         - update node exporter to 1.8.2
         - chdir windows service into to shared-path folder